--- a/new.html
+++ b/new.html
@@ -10,7 +10,9 @@
 
     <h1>Just Testing</h1>
     <h1>Just Testing 1</h1>
-    <h1>Just Testing</h1>
-    
+    <h1>Just Testing 2</h1>
+    <h1>Just Testing 3</h1>
+    <h1>Just Testing 4</h1>
+
 </body>
 </html>
